# wasm-test

./: .gitignore  Cargo.toml  Makefile  flake.nix  index.ts  package-lock.json  package.json  rust-toolchain.toml
src/: config.ts  field.ts  index.ts  lib.rs  model.ts
